--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -30,6 +30,9 @@
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
+      <div class="navbar-nav">
+        <a class="nav-link" href="/listings/about">About</a>
+      </div>
       <div class="navbar-nav ms-auto " style="background: blur(10px);">
           <form class="d-flex" role="search" id="search-form">
             <input class="form-control me-2 search-inp" id="search-input" type="search" placeholder="Search destinations"/>
