--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3 noto-serif-font" id="listing-cards-holder">
-    <% for(let listing of allListings){ %>
+    <% for(let listing of allListings.slice().reverse()){ %>
         <a href="/listings/<%= listing._id %>" class="listing-link">
             <div class="card col listing-card" >
                 <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem">
