--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -16,7 +16,7 @@
                 <p class="card-text ">
                     <%= listing.description %><br>
                 </p>
-                <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %> <br></p>
+                <p class="card-text">Expected Expense :- &#8377;<%= listing.price.toLocaleString("en-IN") %> <br></p>
                 
                 <div class="location-country" style="display: flex;">
                     <p class="card-text">
@@ -24,6 +24,7 @@
                     </p>
                     <p class="card-text" style="margin-left: 3px;">
                          <%= listing.state %>
+                         
                     </p>
                 </div>
                 
@@ -33,6 +34,21 @@
         </div>
 
         <br>
+
+
+
+
+        <div id="map" data-location="<%= listing.location %>"></div>
+
+
+        <!-- Define locationString BEFORE script.js -->
+        <script>
+            const locationString = "<%= listing.location %>";
+        </script>
+        <script src="/js/script.js"></script>
+
+
+
 
 
 
@@ -48,6 +64,22 @@
                 </form>
             </div>
             <% } %>
+
+        <div class="col-6 offset-3 momo-trust-display-regular visit-div">
+            <div class="visit-count">
+                <%=listing.count %> 
+            </div>
+            <div class="visit-btn">
+                <form method="POST" action="/listings/<%= listing._id %>/visited">
+                    <button type="submit">I Visited</button>
+                </form>
+            </div>
+            
+            
+        </div>
+        <div class="info-viewed-btn col-6 offset-3">
+                <p><strong>Info!</strong> If you have visited this spot then let others know by clicking this button</p>
+        </div>
 
 
             <!-- From Uiverse.io by kennyotsu --> 
@@ -140,3 +172,5 @@
 
                 </div>
     </div>
+
+    
