--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -74,7 +74,7 @@
             <div><i class="fa-solid fa-snowflake"></i></div>
             <p>Artic</p>
         </div> -->
-        <div class="tax-toggle">
+        <!-- <div class="tax-toggle">
             <div class="form-check-reverse form-switch">
                 <input class="form-check-input" 
                 type="checkbox" 
@@ -82,7 +82,7 @@
                 id="flexSwitchCheckDefault">
                 <label class="form-check-label" for="switchCheckDefault">Display Total After Taxes</label>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3 noto-serif-font" id="listing-cards-holder">
     <% for(let listing of allListings.slice().reverse()){ %>
@@ -107,17 +107,17 @@
     
 </body>
 <script>
-    let taxSwitch = document.getElementById("flexSwitchCheckDefault");
-    taxSwitch.addEventListener("click", () =>{
-        let taxInfo = document.getElementsByClassName("tax-info");
-        for(info of taxInfo){
-            if(info.style.display != "inline"){
-                info.style.display = "inline";
-            }else{
-                info.style.display = "none";
-            }
+    // let taxSwitch = document.getElementById("flexSwitchCheckDefault");
+    // taxSwitch.addEventListener("click", () =>{
+    //     let taxInfo = document.getElementsByClassName("tax-info");
+    //     for(info of taxInfo){
+    //         if(info.style.display != "inline"){
+    //             info.style.display = "inline";
+    //         }else{
+    //             info.style.display = "none";
+    //         }
             
 
-        }
-    });
+    //     }
+    // });
 </script>
