changes in script.js

--- a/views/listings/about.ejs
+++ b/views/listings/about.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
     <div>
-        <h1 style="margin:auto;">About Page</h1>
+        <h1 style="margin:auto; text-shadow: #1e1c18 2px 2px 6px; " class="mb-3" >About Us</h1>
 
 
 
@@ -65,7 +65,7 @@
                             <img src="https://img.freepik.com/premium-vector/professional-business-man-avatar-vector-illustration-isolated-white-background_1322553-77267.jpg?w=360" alt="Developer 1" class="dev-avatar">
                             <h3 class="dev-name">S Dutta</h3>
                             <p class="dev-role">Developer</p>
-                            <p class="dev-bio">Servers crash for me, but i crush for my co-developer Currently in a committed relationship with MERN and my dark theme.</p>
+                            <p class="dev-bio">Servers crash for me, Currently in a committed relationship with MERN and my dark theme.</p>
                             <span class="flip-hint">Hover for GitHub</span>
                         </div>
                         <div class="dev-card-back">
