--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -50,7 +50,7 @@
             <div><i class="fa-solid fa-water"></i></div>
             <p>Lakes</p>
         </div>
-        <div class="filter generic-random-filter">
+        <div class="filter" id="mandir-filter">
             <div><i class="fa-solid fa-gopuram"></i></div>
             <p>Mandir</p>
         </div>
@@ -58,7 +58,7 @@
             <div><i class="fa-solid fa-tree"></i></div>
             <p>Parks</p>
         </div>
-        <div class="filter generic-random-filter">
+        <div class="filter " id="pools-filter">
             <div><i class="fa-solid fa-person-swimming"></i></div>
             <p>Pools</p>
         </div>
