--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,14 +1,14 @@
 <footer class="footer">
     <div class="f-info">
         <div class="f-info-socials">
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-facebook" ></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin"></i>
 
         </div>
         <div class="f-info-brand"> &copy; Explorer Private Limited</div>
         <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
+            <a href="/privacy" style="margin-right: 10px;">Privacy</a>
             <a href="/terms">Terms</a>
         </div>
     </div>
